# llm-ide-rules

./: .copier-answers.yml  .envrc  .gitignore  .mcp.json  AGENT.md  AGENTS.md  CHANGELOG.md  GEMINI.md  Justfile  MCP_CLI_README.md  README.md  TODO  commands.md  constants.py  copier.yaml  download.sh  explode.py  explode.sh  implode.py  instructions.md  instructions_cursor.md  mcp.cli  mcp.json  metadata.json  opencode.json  pyproject.toml
.agents/rules/: alembic-migrations.md  fastapi.md  justfiles.md  pytest-integration-tests.md  pytest-tests.md  python-app.md  python-route-tests.md  python.md  react-router.md  react.md  shell.md  typescript.md
.agents/skills/dev-in-browser/: SKILL.md
.claude/commands/: fastapi_stripe.md  write_readme.md
.claude/rules/: alembic-migrations.md  fastapi.md  general.md  justfiles.md  pytest-integration-tests.md  pytest-tests.md  python-app.md  python-route-tests.md  python.md  react-router.md  react.md  shell.md  typescript.md
.copilot/: mcp-config.json
.cursor/commands/: secrets.md
.cursor/rules/: alembic-migrations.mdc  fastapi.mdc  fix-tests.mdc  general.mdc  implement-fastapi-routes.mdc  justfiles.mdc  plan-only.mdc  pytest-integration-tests.mdc  pytest-tests.mdc  python-app.mdc  python-command.mdc  python-route-tests.mdc  python.mdc  react-router-client-loader.mdc  react-router.mdc  react.mdc  reactrouter.mdc  refactor-on-instructions.mdc  secrets.mdc  shell.mdc  standalone-python-scripts.mdc  stripe-backend.mdc  typescript-docstring.mdc  typescript.mdc
.gemini/: settings.json
.gemini/commands/: dev-in-browser.toml  fastapi_stripe.toml  fix-tests.toml  implement-fastapi-routes.toml  plan-only.toml  python-command.toml  react-router-client-loader.toml  refactor-on-instructions.toml  secrets.toml  standalone-python-scripts.toml  stripe-backend.toml  typescript-docstring.toml
.github/: copilot-instructions.md
.github/instructions/: fastapi.instructions.md  general.instructions.md  justfiles.instructions.md  pytest-integration-tests.instructions.md  pytest-tests.instructions.md  python-app.instructions.md  python-route-tests.instructions.md  python.instructions.md  react-router.instructions.md  react.instructions.md  shell.instructions.md  typescript.instructions.md
.github/prompts/: fix-tests.prompt.md  implement-fastapi-routes.prompt.md  react-router-client-loader.prompt.md  refactor-on-instructions.prompt.md  secrets.prompt.md  standalone-python-scripts.prompt.md  typescript-docstring.prompt.md
.github/workflows/: build_and_publish_release_please.yml
airules/: __main__.py
airules/commands/: download.py  explode.py
src/airules/: __init__.py  cli.py  constants.py
src/llm_ide_rules/: __init__.py  __main__.py  constants.py  log.py  markdown_parser.py  sections.json  utils.py  version.py
src/llm_rules/: __init__.py  cli.py
tests/: AGENTS.md  conftest.py  test_agents_splitting.py  test_antigravity.py  test_base_agent.py  test_cli.py  test_complex_fixture.py  test_config.py  test_config_preservation.py  test_constants.py  test_db_prompt.py  test_delete.py  test_delete_safety.py  test_download.py  test_explode.py  test_ignores.py  test_implode.py  test_import.py  test_integration_lifecycle.py  test_integration_safety.py  test_markdown_parser.py  test_mcp.py  test_roundtrip.py
(+38 files in other folders)
