[project]
name = "airules"
version = "0.1.0"
description = ""
keywords = []
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
authors = [{ name = "Michael Bianco", email = "mike@mikebian.co" }]
urls = { "Repository" = "https://github.com/iloveitaly/airules" }

# additional packaging information: https://packaging.python.org/en/latest/specifications/core-metadata/#license
[project.scripts]
airules = "airules:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8.3.3"]

