[project]
name = "llm-ide-rules"
version = "0.8.0"
description = "CLI tool for managing LLM IDE prompts and rules"
keywords = ["llm", "ide", "prompts", "cursor", "copilot"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "structlog-config>=0.6.0",
    "requests>=2.25.0",
    "pydantic>=2.0.0",
    "json5>=0.9.0",
    "tomli-w>=1.0.0",
    "markdown-it-py>=4.0.0",
]
authors = [{ name = "Michael Bianco", email = "mike@mikebian.co" }]
urls = { "Repository" = "https://github.com/iloveitaly/llm-ide-rules" }

# additional packaging information: https://packaging.python.org/en/latest/specifications/core-metadata/#license
[project.scripts]
llm-ide-rules = "llm_ide_rules:main"

[build-system]
requires = ["uv_build>=0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# avoids the src/ directory structure
module-root = "src"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pyright[nodejs]>=1.1.408",
    "ruff>=0.15.0",
    "pytest-mock>=3.10.0",
    "coverage>=7.13.4",
    "pytest-cov>=7.0.0",
    "covdefaults>=2.3.0",
]

[tool.pyright]
exclude = ["examples/", "playground/", "tmp/", ".venv/", "tests/"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing --cov-report=html:tmp/htmlcov"

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["llm_ide_rules"]

[tool.coverage.report]
fail_under = 50

[tool.ruff]
extend-exclude = ["playground.py", "playground/"]
